<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/homeButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_website"
            android:textColor="@color/lime" />

        <Button
            android:id="@+id/homeButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_calendar"
            android:textColor="@color/lime" />

        <Button
            android:id="@+id/homeButton3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_wiki"
            android:textColor="@color/lime" />
        
        <Button 
            android:id="@+id/homeButton4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/lime" />
	   
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/name_long"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/lime"
        android:textSize="24sp" />

    <!-- <TextView -->
    <!-- android:id="@+id/textView2" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@+id/textView1" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:layout_marginTop="16dp" -->
    <!-- android:text="@string/motto" -->
    <!-- android:textStyle="italic" /> -->



</RelativeLayout>